
0.3.6 2008-01-06 Gregory Nutt <spudmonkey@racsa.co.cr>

	* Changes for use with SDCC compiler
	* Added a simulated z80 target
	* Fix deadlock errors when using stdio but with no buffering
	* Add support for Pascal P-Code interpreter

0.3.6.1 2008-01-07 Gregory Nutt <spudmonkey@racsa.co.cr>

	* The initial 0.3.6 release including an error that prevented
	  building successfully if the Pascal add-on was
	  was not present.

0.3.7 2008-01-31 Gregory Nutt <spudmonkey@racsa.co.cr>

	* Added support for the Zilog Z16F using the Zilog Z16F2800100ZCOG
	  Development Kit.
	* Add support toolchains that do not support making of dependencies
	* Fix Cygwin build with spaces in directory names
	* Name make system changes to deal with non-GNU toolchains (i.e., Zilog)
	* Add support for Windows native toolchains that cannot follow Cygwin soft links
	* Modified serial driver interface to handle hardware with non-16550A-like
	  interrupt architecture (like the Z16F)
	* Added a "dumb" serial console driver to simplify OS bringup
	* Corrected a bug that caused the errno value of one task to be clobbered
	  when a different task exits.  Effects all architectures.

0.3.8 2008-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* Added a test case to verify the Pascal P-Code interpreter
	* Added /dev/zero
	* 'errno' is now defined to be *get_errno_ptr() with no name conflicts
	* Added lseek() and fseek()
	* Integrated pascal test case on the simulation platform.  Needs pascal-0.1.1.
	* Integrated pascal test case on the z16f platform.  Needs pascal-0.1.2 (not
	  yet released).
	* C Buffered I/O fixes:
	 (1) Fix fflush() return value,
	 (2) Add correct fflush behavior when the FILE argument is null.
	 (3) Add logic to a correctly handle read/write access on the same FILE
	 (4) fseek() flushes read/write data when before moving the file pointer
	 (5) When read data is flushed, reposition the file pointer to account for
	     buffered, but unreand data


