@@ -984,6 +984,7 @@ nuttx-0.3.8 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	 (4) fseek() flushes read/write data when before moving the file pointer
 	 (5) When read data is flushed, reposition the file pointer to account for
 	     buffered, but unreand data
+	* Pascal P-Code files are now standardized to big-endian for portability
 
 pascal-0.1.2 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
